config/envoy_config_tap_500_code_responses_live.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 443 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: mystery-game
                  virtual_hosts:
                    - name: mystery-game
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: mystery-game-server }
## Capture all traffic that produces a 500 code response
                http_filters:
                  - name: envoy.filters.http.tap
                    config:
                      common_config:
                        static_config:
                          match_config:
                            http_response_headers_match:
                              headers:
                                - name: ":status"
                                  exact_match: "500"
                          output_config:
                            sinks:
                              - file_per_tap:
                                  path_prefix: tap_root/error_traffic/err
                  - name: envoy.router
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/site.crt"
                  private_key:
                    filename: "/etc/site.key"
  clusters:
    - name: mystery-game-server
      connect_timeout: 0.25s
      type: static
      lb_policy: round_robin
      hosts: [{ socket_address: { address: 127.0.0.1, port_value: 9912 } }]
